--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
 	"description": "boilerplate",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"dev": "nodemon server.js"
 	},
 	"dependencies": {
-		"body-parser": "^1.15.2",
-		"chai": "^4.2.0",
-		"chai-http": "^4.3.0",
-		"cors": "^2.8.1",
-		"dotenv": "^8.2.0",
-		"express": "^4.14.0",
-		"mocha": "^3.2.0",
-		"zombie": "^5.0.5"
+		"body-parser": "^1.20.2",
+		"chai": "^4.4.1",
+		"chai-http": "^4.4.0",
+		"cors": "^2.8.5",
+		"dotenv": "^8.6.0",
+		"express": "^4.19.2",
+		"mocha": "^10.6.0",
+		"nodemon": "^3.1.4",
+		"zombie": "^6.1.4"
 	},
 	"repository": {
 		"type": "git",
