--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"dotenv": "^8.6.0",
 		"express": "^4.19.2",
 		"mocha": "^10.6.0",
+		"mongodb": "^6.8.0",
+		"mongoose": "^8.4.4",
 		"nodemon": "^3.1.4",
 		"zombie": "^6.1.4"
 	},
